--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
             <h1 class="title">DrivEazy</h1>
             <p class="para">Your A.I. powered Driving Assistance Suite</p>
             <div class="btn-group">
-                <button>OBJECT DETECTION</button>
-                <button>SLEEP WATCHER</button>
+                <button>DOWNLOAD</button>
             </div>
     </center>
 
